Add port completion plan and clear carry-over defects
Adds FABRIC_PORT_PLAN.md: a feature-and-outcome plan to finish the port in
four majors (Simulated Core, Sable, Simulated Complete, Aeronautics+Offroad).
It deliberately prescribes observable outcomes only, not architecture, so
whoever implements each version is free to choose their own approach.

Two facts it records are worth calling out. Create Fabric 6.0.8.1 for 1.20.1
nests Ponder 1.0.91, Registrate 1.3.79, Flywheel 1.0.5 and Porting Lib 2.3.13,
so the modern Create 6 library stack is available here and the real porting
cost is the 1.21.1 -> 1.20.1 vanilla delta rather than the loader. And no Veil
4.x is published for 1.20.1 at all, which is the actual reason the Sable core
probe cannot compile.

Alongside the plan, clears the defects it lists as carry-over:

- Delete the unreferenced FabricAssemblyPlan and PreparedAssembly preflight
  scaffolding, superseded by the working assemble path.
- Keep ScanStats, whose counters were computed every scan and read by nothing
  once those classes went. The summary now shows in /simulated assembler_state
  and is carried onto the anchor block entity so a live assembly reports it.
- Query Super Glue once per visited position instead of once per candidate
  neighbour pair. A pair reaches at most one block past its anchor, so a radius
  of 17 around the position covers every box the per-pair search used; results
  are unchanged. Track connecting sheets separately from the lookup cache so
  only glue that actually joined two moved blocks travels with the structure.
- Preserve scan discovery order. Copying into an unordered set made identical
  structures assemble differently between runs.
- Advance helms on the server tick rather than on packet arrival, so thrust and
  braking no longer depend on the pilot's packet rate. The client transmits
  input only when it changes, and position is broadcast only when the craft
  actually moved.
- Release the helm and the controlling-pl